[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cloudinary>=1.44.2",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "moviepy>=2.2.1",
    "numpy>=2.4.4",
    "pillow>=11.3.0",
    "python-dotenv>=1.2.2",
    "pytz>=2026.1.post1",
    "requests>=2.33.1",
]
